Fix bugs, update responsive for low resolution Tablet screen

--- a/src/assets/scss/_variables.scss
+++ b/src/assets/scss/_variables.scss
@@ -2,3 +2,4 @@ $primary-color: #4685f2;
 $header-height: 78px;
 $white: #fff;
 $black: #000;
+$nav-text-color: #808080;
